@@ -3,7 +3,7 @@ package xyz.shurlin.sprigserver.controller;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.core.io.Resource;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.ResourceLoader;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -13,55 +13,35 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
 
 @RestController
 @RequestMapping("/update")
 public class UpdateController {
+    public static final String VERSION = "0.3.4";
     @Autowired
     private ResourceLoader resourceLoader;
     private final Logger logger = LoggerFactory.getLogger(UpdateController.class);
 
     @GetMapping("/version")
     public ResponseEntity<String> getVersion() {
-        Resource resource = resourceLoader.getResource("classpath:apk/");
-//
-        try {
-            File list = resource.getFile();
-            if (list.isDirectory())
-                for (File file : list.listFiles()) {
-                    if (file.getName().endsWith(".apk")) {
-                        String fileName = file.getName(); // 样例：cdcpp_v0.2.8_release.apk
-                        String version = fileName.split("_")[1].substring(1);
-                        return ResponseEntity.ok(version);
-                    }
-                }
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-        return ResponseEntity.status(404).body("0.0");
+        return ResponseEntity.ok(VERSION);
     }
 
     // 提供下载安装包的api
     @GetMapping(value = "/download", produces = MediaType.APPLICATION_OCTET_STREAM_VALUE)
     public ResponseEntity<byte[]> downloadApk() {
-        Resource resource = resourceLoader.getResource("classpath:apk/");
+        String name = "cdcpp_v" + VERSION + "_release.apk";
+        ClassPathResource resource = new ClassPathResource("apk/" + name);
         try {
-            File list = resource.getFile();
-            if (list.isDirectory())
-                for (File file : list.listFiles()) {
-                    if (file.getName().endsWith(".apk")) {
-                        File apk = resourceLoader.getResource("classpath:apk/" + file.getName()).getFile();
-                        byte[] output = Files.readAllBytes(apk.toPath());
-                        logger.info("APK {} downloaded.", file.getName());
-                        return ResponseEntity.ok()
-                                .header("Content-Disposition", "attachment; filename=\"" + file.getName() + "\"")
-                                .body(output);
-                    }
-                }
+            InputStream inputStream = resource.getInputStream();
+            logger.info("APK {} downloaded.", VERSION);
+            return ResponseEntity.ok()
+                    .header("Content-Disposition", "attachment; filename=\"" + name + "\"")
+                    .body(inputStream.readAllBytes());
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-        return null;
     }
 }
